# airflow

./: .gitignore  README.rst  pyproject.toml
pipelines/: __init__.py
pipelines/dags/: holidays_dag.py  holidays_etl.py
