[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Zuhra<ujkanoviczuhra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^1.10.12"
virtualenv = "^20.2.1"
gunicorn = "^20.0.4"
datetime = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
